--- a/pages/styles/medics.scss
+++ b/pages/styles/medics.scss
@@ -33,8 +33,8 @@
     align-items: center;
     flex-wrap: wrap;
     color: $azul;
-    .agenda {
-      background: url("/img/agenda.png") no-repeat center;
+    @mixin iconsbg($image) {
+      background: url($image) no-repeat center;
       background-size: cover;
       color: $azul;
       &:hover {
@@ -44,53 +44,26 @@
             rgba(255, 255, 255, 0.5) 50%,
             rgba(16, 50, 59, 0.8) 100%
           ),
-          url("/img/agenda.png") no-repeat center;
+          url($image) no-repeat center;
         background-size: cover;
         color: $azul;
         font-weight: 700;
         transform: scale(1.05);
       }
     }
+    .agenda {
+      @include iconsbg("/img/agenda.png");
+    }
     .consulta {
-      background: url("/img/consulta.png") no-repeat center;
-      background-size: cover;
-      color: $azul;
-      &:hover {
-        background: linear-gradient(
-            0deg,
-            rgba(16, 50, 59, 0.8) 0%,
-            rgba(255, 255, 255, 0.5) 50%,
-            rgba(16, 50, 59, 0.8) 100%
-          ),
-          url("/img/consulta.png") no-repeat center;
-        background-size: cover;
-        color: $azul;
-        font-weight: 700;
-        transform: scale(1.05);
-      }
+      @include iconsbg("/img/consulta.png");
     }
 
     .historia {
-      background: url("/img/historial.svg") no-repeat center;
-      background-size: cover;
-      color: $azul;
-      &:hover {
-        background: linear-gradient(
-            0deg,
-            rgba(16, 50, 59, 0.8) 0%,
-            rgba(255, 255, 255, 0.5) 50%,
-            rgba(16, 50, 59, 0.8) 100%
-          ),
-          url("/img/historial.svg") no-repeat center;
-        background-size: cover;
-        color: $azul;
-        font-weight: 700;
-        transform: scale(1.05);
-      }
+      @include iconsbg("/img/historial.svg");
     }
     div {
       margin-top: 25px;
-      width: 30%;
+      width: 30%;      
       display: flex;
       justify-content: center;
       align-items: center;
