--- a/pages/styles/botonHero.scss
+++ b/pages/styles/botonHero.scss
@@ -1,6 +1,3 @@
-$green: #41e296;
-$blue: #3ab0f0;
-$azul: #10323b;
 .boton-hero {
   width: 30%;
   margin: auto;
@@ -45,6 +42,8 @@ $azul: #10323b;
       color: $azul;
       cursor: pointer;
       border-radius: 50px;
+      border: 2px solid $azul;
+      margin: 0px 5px;
     }
     button#ingresar {
       background-color: $azul;
@@ -52,6 +51,48 @@ $azul: #10323b;
       cursor: pointer;
       &:hover {
         background-color: $green;
+      }
+    }
+  }
+}
+///////////////////////////////////////////////////
+// RESPONSIVE /////////////////////////////////////@extend
+
+@media (max-width: 992px) {
+  .boton-hero {
+    width: 50%; //
+    height: 30vw;
+    margin-top: -30px; //
+    margin-bottom: -80px;
+    border-radius: 40px; //
+    padding: 25px; //
+    h1 {
+      font-size: 25px; //
+    }
+    p {
+      font-size: 18px; //
+      width: 90%; //
+    }
+  }
+}
+@media (max-width: 425px) {
+  .boton-hero {
+    width: 90%; // //
+    height: 50vw; // //
+    margin-top: -30px; //
+    margin-bottom: -80px; //
+
+    padding: 15px; // //
+    h1 {
+      font-size: 20px; // //
+    }
+    p {
+      font-size: 15px; //
+      width: 90%; //
+    }
+    .buttons {
+      button {
+        font-size: 15px;
       }
     }
   }
