--- a/pages/styles/telemedicine.scss
+++ b/pages/styles/telemedicine.scss
@@ -1,9 +1,8 @@
 .telemedicine {
   padding: 50px 0px;
   width: 100%;
-  height: auto;
   display: flex;
-
+  height: 70vh;
   justify-content: center;
   align-items: center;
   background: url("/img/fondo-2 (1).png") no-repeat top center;
@@ -70,6 +69,71 @@
       width: 100%;
       font-size: 25px;
       padding: 20px 0px;
+    }
+  }
+}
+
+///////////////////////////////////////////////////////////////////////@extend
+//  RESPONSIVE ////////////////////////
+
+@media (max-width: 992px) {
+  .telemedicine {
+    padding: 20px 0px;
+    flex-direction: row;
+    height: auto;
+    img {
+      width: 50%;
+      height: auto;
+      border-radius: 20px;
+      align-self: flex-start;
+    }
+    p {
+      padding: 15px;
+      text-align: center;
+    }
+    .content {
+      width: 100%;
+
+      h1 {
+        font-size: 40px;
+      }
+      p {
+        text-align: center;
+        font-size: 20px;
+        line-height: 1.2;
+      }
+      button {
+        align-self: center;
+        font-weight: 500;
+      }
+    }
+  }
+}
+@media (max-width: 425px) {
+  .telemedicine {
+    padding: 20px 0px;
+    flex-direction: column;
+
+    img {
+      width: 90%;
+      height: auto;
+      border-radius: 20px;
+    }
+    .content {
+      width: 90%;
+
+      h1 {
+        font-size: 40px;
+      }
+      p {
+        text-align: center;
+        font-size: 20px;
+        line-height: 1.2;
+      }
+      button {
+        align-self: center;
+        font-weight: 500;
+      }
     }
   }
 }
